# fire

./: Cargo.toml  LICENSE  README.md  compose.yml  config.sample.fire.yml  config.simple.config.fire.yml  zsh_completations
.github/: FUNDING.yml
.github/workflows/: release.yml
docs/: commands-and-args.md  completion.md  examples.md  overview.md  runtimes-and-eval.md  troubleshooting.md
samples/: test.fire.yml
schemas/: fire.schema.json
scripts/: common.mjs  common.py  common.ts
scripts/helpers/: helper.ts  test.mjs
src/: cli.rs  completion.rs  config.rs  execute.rs  help.rs  lib.rs  main.rs  registry.rs  resolve.rs
