[package]
name = "fire-cli"
version = "0.1.2"
edition = "2021"
description = "command managet"
license-file = "LICENSE"
documentation = "https://docs.rs/fire-cli"
homepage = "https://github.com/gbenm/fire"
repository = "https://github.com/gbenm/fire"

[[bin]]
name = "fire"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
serde_yaml = "0.9.34"
serde = { version = "1.0", features = ["derive"] }
