[package]
name = "fire-cli"
version = "1.0.0"
edition = "2021"
description = "command managet"
license-file = "LICENSE"
documentation = "https://docs.rs/fire-cli"
homepage = "https://github.com/gbenm/fire"
repository = "https://github.com/gbenm/fire"

[[bin]]
name = "fire"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "6.0.0"
yaml_serde = "0.10"
serde = { version = "1.0", features = ["derive"] }
